tests/sksl/errors/MultipleFieldsInInterfaceBlocks.glsl
### Compilation failed:

error: 1: field 'f' was already defined in the same interface block ('IB')
error: 7: symbol 'f' was already defined
2 errors
